# emxg

./: .gitignore  CHANGELOG.md  Makefile  PROJECT_SUMMARY.md  README.md  advanced_example_v2.py  final_test.py  pyproject.toml  requirements.txt  test_logger.py
emxg/: __init__.py  cli.py  client.py  data_adapter.py  device_info.py  emfinger.py  py.typed  wencai_client.py  wencai_converter.py
examples/: README.md  basic_example.py  complete_example.py  fingerprint_example.py
tests/: test_client.py  test_emfinger.py
